Fixed some spacing between game title and menu

--- a/src/game/resources/main.css
+++ b/src/game/resources/main.css
@@ -9,6 +9,10 @@
     -fx-background-color: radial-gradient(center 50% 50%, radius 90%, #444, #000);
 }
 
+.game-title {
+    -fx-font-size: 2em;
+}
+
 .credit {
     -fx-font-size: .7em;
     -fx-fill: #ddd;
